# frblock

./: .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/: build-release.ps1  build-release.sh  parallel.ps1  parallel.sh
src/: config.cpp  config.hpp  main.cpp  updater.cpp  updater.hpp
tests/: example.cpp  updater_tests.cpp
